# Bot

./: README.md
Software/IntelRealSense/: imu_data.py  video_stream.py
Software/Ros/intel_realsense_d435i/: package.xml  setup.cfg  setup.py
Software/Ros/rp_lidar_c1/: CMakeLists.txt  package.xml
Software/Ros/servo_motor/: package.xml  setup.py
Software/Ros/src/intel_realsense_d435i/: package.xml  setup.py
Software/Ros/src/intel_realsense_d435i/intel_realsense_d435i/: video_stream.py
Software/Ros/src/realsense_d435i/: CMakeLists.txt  package.xml
Software/Ros/src/realsense_d435i/src/: video_stream_node.cpp
Software/Ros/src/rp_lidar_c1/: CMakeLists.txt  package.xml
Software/Ros/src/servo_motor/: package.xml  setup.cfg  setup.py
Software/Ros/src/servo_motor/servo_motor/: driver_node.py  test.py  values.py
Software/Ros/src/virtual_lab/: CMakeLists.txt  package.xml
Software/Ros/src/virtual_lab/config/: gz_bridge.yaml
Software/Ros/src/virtual_lab/launch/: display.launch.xml  spawn_robot.launch.py  world.launch.xml
Software/Ros/src/virtual_lab/meshes/: bk_left_wheel_link.STL  bk_right_wheel_link.STL  camera_link.STL  fr_left_wheel_link.STL  fr_right_wheel_link.STL  lidar_link.STL  virtual_lab.mtl
Software/Ros/src/virtual_lab/rviz/: urdf.rviz
Software/Ros/src/virtual_lab/urdf/: mogi_bot.urdf  slam_bot.gazebo  slam_bot.urdf
Software/Ros/src/virtual_lab/worlds/: world.sdf
Software/Segmentation_Model/: YOLOv8_Inference_Pipeline.ipynb
